--- a/ProyectoFinal/package.json
+++ b/ProyectoFinal/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
+    "@stripe/stripe-js": "^1.54.1",
     "bcrypt": "^5.1.0",
     "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.3",
